# not_much_fire

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
not_much_fire/: cache.py  cli.py  database.py  notifier.py  notmuch
notmuch_notifier/: cache.py  database.py  main.py  notifier.py
