[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "not-much-fire"
version = "0.1.2"
description = "A simple Notmuch notification tool"
authors = ["Thore Weilbier <thore@weilbier.net>"]
repository = "https://github.com/weilbith/not-much-fire"
readme = "README.md"
packages = [
    { include = "not_much_fire" },
]

[tool.poetry.scripts]
not-much-fire = "not_much_fire.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
notify2 = "^0.3.1"
dbus-python = "^1.2"
appdirs = "^1.4"
notmuch = "^0.29.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.740.0"
pre-commit = "^1.18"
isort = "^4.3"

[tool.black]
line-length = 79

[tool.isort]
line-length = 79
known-first-party = ["not-much-fire"]
# compatibility for black
multi-line-output = 3
include-trailing-comma = true
force-grid-wrap = 0
use-parentheses = true
